--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1105,27 +1105,42 @@ section {
   }
 }
 /*--------------------------------------------------------------
-# Side Projects (styled like Resume)
+# Side Projects Section
 --------------------------------------------------------------*/
-
 .side-projects-section {
   padding: 60px 0;
-  overflow: hidden;
+  background: #f5f8fd;
 }
 
-.side-projects-section .resume-title {
-  font-size: 26px;
-  font-weight: 700;
-  margin-top: 20px;
+.side-projects-section .section-title {
+  padding-bottom: 30px;
+}
+
+.side-projects-section .section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
   margin-bottom: 20px;
-  color: #050d18;
+  padding-bottom: 20px;
+  position: relative;
+  color: #173b6c;
+}
+
+.side-projects-section .section-title h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: #149ddd;
+  bottom: 0;
+  left: 0;
 }
 
 .side-projects-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .side-project-tile {
@@ -1137,17 +1152,14 @@ section {
   max-width: 520px;
   min-width: 320px;
   margin-bottom: 30px;
-  border-left: 2px solid #1f5297;
-  position: relative;
 }
 
 .side-project-tile h3 {
-  font-size: 18px;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
-  color: #050d18;
-  margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: 700;
+  color: #173b6c;
+  margin-bottom: 15px;
+  font-family: "Raleway", sans-serif;
 }
 
 .side-project-tile p {
@@ -1157,13 +1169,10 @@ section {
 }
 
 .side-project-tile ul {
-  padding-left: 20px;
+  list-style: disc inside;
   margin-bottom: 15px;
   color: #272829;
-}
-
-.side-project-tile ul li {
-  padding-bottom: 8px;
+  padding-left: 18px;
 }
 
 .side-project-group {
