--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1204,11 +1204,11 @@ section {
 }
 
 .side-project-image-figure img {
-  width: 100%;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 6px 6px 0 0;
+  max-width: 100%;
+  height: auto;
   display: block;
+  border-radius: 6px 6px 0 0;
+  object-fit: unset; /* disables cropping */
 }
 
 .side-project-image-figure figcaption {
