--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1237,6 +1237,7 @@ section {
   transition: background 0.2s, color 0.2s;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 8px;
 }
 .portfolio-download-link:hover {
   background: #149ddd;
